Fix: Correct logo alignment

--- a/client/src/components/Nav/Nav-Brand/NavBrand.css
+++ b/client/src/components/Nav/Nav-Brand/NavBrand.css
@@ -24,3 +24,9 @@ body.dark-theme .navbrand img {
   filter: brightness(1.2);
 }
 
+@media(max-width:768px){
+  .navbrand img{
+        margin-top: 0.5rem;
+        padding: 10px;
+  }
+}
